fix PDF overflow

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 body {
   margin: 0;
+  overflow:hidden;padding:0;
   font-family: 'IBM Plex Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
